# fjson

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build-and-publish-web.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
lib/: Cargo.toml  README.md
lib/src/: lib.rs  tests.rs
src/: lib.rs  lib2.rs  tests.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
web/: README.md  index.html
web/static/: site.webmanifest
