[package]
name = "fjson-core"
version = "0.1.1"
edition = "2024"
description = "fjson is a zero-dependency JSON Parser and Fixer. It takes any input and produces valid JSON. No AI involved."
repository = "https://github.com/matx64/fjson"
readme = "README.md"
license = "MIT"
keywords = ["json", "parser", "fixer"]
categories = ["parsing"]

[dependencies]
